# Zinc_Interview

./: .dockerignore  .gitignore  Architecture_Planning.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose-stack.yml  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: cicd.yml
core/abstractions/: __init__.py
core/constants/: logger.py
core/middlewares/: log_request.py
core/settings/: __init__.py  base_settings.py  database.py  django_settings.py  gunicorn_settings.py
core/utils/: api_response.py  handler_validation.py  thread_local.py
core/utils/__pycache__/: thread_local.cpython-312.pyc.140232783277264
scripts/: build_image.sh  clear_pyc_pycache.sh  pull_run_container.sh  pull_run_container_stack.sh  run_container.sh  run_stack_container.sh  scale_stack.sh
zinc_app/: Makefile  manage.py  run_job.py
zinc_app/envs/: .sample.env
zinc_app/src/app/: urls.py
zinc_app/src/app/controllers/: sales_controllers.py
zinc_app/src/app/health_check/: health_check_views.py
zinc_app/src/app/migrations/: 0001_initial.py  0002_summarysalesbydate.py  0003_rename_total_items_summarysalesbydate_total_sales.py  0004_sales_app_sales_sale_da_afc8ad_idx_and_more.py  0005_rename_total_sales_summarysalesbydate_total_orders_and_more.py
zinc_app/src/app/models/: __init__.py  sales.py
zinc_app/src/configs/: gunicorn_config.py
zinc_app/src/dj_project/: app_settings.py  asgi.py  init_logger.py  settings.py  urls.py  wsgi.py
zinc_app/tests/: __init__.py  health_test.py  import_sales_test.py  revenue_daily.py  revenue_test.py
(+5 files in other folders)
